# Gamer-Hub-Be

./: Cargo.toml  README.md  todo.md
data/: games.json
migrations/: 20241004090848_create_table_admin.sql  20241004090852_create_table_user.sql  20241004093911_create_table_admin_log.sql  20241004094752_create_table_community.sql  20241004120903_create_table_community_event.sql  20241004121916_create_table_community_member.sql  20241005034326_create_table_discord_profile.sql  20241005034736_create_table_follow.sql  20241005035000_create_table_game.sql  20241005035414_create_table_post.sql  20241005040043_create_table_bookmark.sql  20241005040625_create_table_comment.sql  20241005041253_create_table_like.sql  20241005041601_create_table_post_media.sql  20241005042057_create_table_profile_viewer.sql  20241005042257_create_table_reply.sql  20241005042648_create_table_search_history.sql  20241005042831_create_table_team.sql  20241005043114_create_table_achievement.sql  20241005043258_create_table_team_achievement.sql  20241005043425_create_table_team_member.sql  20241005043750_create_table_tournament.sql  20241005044352_create_table_transaction.sql  20241005045125_create_table_user_achievement.sql  20241005045256_create_table_user_preference.sql  20241005045350_create_table_wallet.sql
src/: main.rs  route.rs
src/database/: conf.rs
src/enums/: global.rs
src/helpers/: global.rs  jwt.rs  mod.rs  response.rs  validator.rs
src/models/: achievement.rs  admin.rs  admin_log.rs  community.rs  community_event.rs  community_member.rs  discord_profile.rs  follow.rs  game.rs  (+18 more)
(+11 files in other folders)
