[package]
name = "Gamer-Hub-Be"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
dotenv = "0.15.0"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = {version = "0.8.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
