[package]
name = "Gamer-Hub-Be"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-governor = "0.6.0"
actix-web = "4.9.0"
bcrypt = "0.15.1"
chrono = {version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
lettre = "0.11.9"
once_cell = "1.20.2"
regex = "1.11.0"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = {version = "0.8.2", features = ["postgres", "runtime-tokio","time","chrono","uuid","bigdecimal"] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
validator = {version = "0.18.1", features = ["derive"] }

